--- a/src/assets/sass/index.scss
+++ b/src/assets/sass/index.scss
@@ -1,12 +1,16 @@
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&family=ZCOOL+QingKe+HuangYou&display=swap");
 :root {
   --white-color: #fff;
-  --hover-text-color: #3498db;
+  --hover-text-color: #5f27cd;
 
   --dark-bg: #11081f;
   --white-bg: #fff;
 
+  --light-gray-bg: #fef9f4;
+  --medium-gray-bg: #fef9f4;
+
   --black-text-color: #333;
+  --blue: #5352ed;
 }
 *,
 *::before,
@@ -38,16 +42,17 @@ a:link {
   position: relative;
   padding: 14px 20px;
   font-size: 18px;
-  border-radius: 100px;
+  border-radius: 10px;
   text-transform: capitalize;
   font-weight: 800;
   font-family: "Josefin Sans", sans-serif;
+  border: 0;
   cursor: pointer;
   &::after {
     content: "";
     position: absolute;
     z-index: -1;
-    border-radius: 100px;
+    border-radius: 10px;
     width: 100%;
     height: 100%;
     left: 0;
@@ -76,7 +81,7 @@ a:link {
 }
 
 .btn__blue {
-  background-color: var(--hover-text-color);
+  background-color: var(--blue);
   color: var(--white-bg);
 }
 
