--- a/src/components/AppBannner/index.scss
+++ b/src/components/AppBannner/index.scss
@@ -1,13 +1,21 @@
+.bg {
+  background-image: url(../../assets/img/gradienta-n2XqPm7Bqhk-unsplash.jpg);
+  background-position: center;
+  background-size: cover;
+  clip-path: polygon(0 0, 100% 0, 100% 95%, 0 100%);
+  z-index: 10;
+  position: relative;
+}
+
 .container {
-  background-color: #060718;
-  height: calc(100vh);
-  padding: 0 30px;
+  padding: 30px;
   display: flex;
   align-items: center;
-  overflow: hidden;
+  // height: calc(100vh);
+
   @media screen and (max-width: 1361px) {
     flex-direction: column-reverse;
-    padding-bottom: 30px;
+    padding-bottom: 40px;
   }
   &__wrapper {
     flex: 1 1 0%;
@@ -22,7 +30,10 @@
     }
     &--title {
       color: var(--white-bg);
-      font-size: 35px;
+      font-size: 30px;
+      line-height: 45px;
+      font-weight: 400;
+      letter-spacing: 5px;
       & span {
         font-weight: bold;
         font-family: "ZCOOL QingKe HuangYou", cursive;
@@ -75,7 +86,14 @@
     }
   }
   &__banner {
-    width: 50%;
+    width: 45%;
+    background: rgba(255, 255, 255, 0.1);
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    backdrop-filter: blur(4.5px);
+    -webkit-backdrop-filter: blur(4.5px);
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    -webkit-backdrop-filter: blur(8px);
     @media screen and (max-width: 1361px) {
       height: 100%;
       width: auto;
