--- a/src/components/AppHeader/index.scss
+++ b/src/components/AppHeader/index.scss
@@ -1,8 +1,5 @@
 .header {
-  height: 64px;
-  background-color: var(--dark-bg);
-
-  z-index: 100;
+  height: 90px;
 
   &__drawer {
     & .mantine-tbarly {
@@ -42,7 +39,7 @@
     justify-content: space-around;
     align-items: center;
     &--link {
-      font-size: 18px;
+      font-size: 20px;
       font-weight: 600;
       color: var(--white-color);
       position: relative;
@@ -58,12 +55,12 @@
       & .header__wrapper--link {
         transition: all 0.3s ease-in-out;
         letter-spacing: 3px;
-        &:hover {
-          color: var(--hover-text-color);
-          ::after {
-            width: 100%;
-          }
-        }
+        // &:hover {
+        //   color: var(--hover-text-color);
+        //   ::after {
+        //     width: 100%;
+        //   }
+        // }
         &::after {
           content: "";
           position: absolute;
