--- a/src/components/AppMedium/index.scss
+++ b/src/components/AppMedium/index.scss
@@ -1,15 +1,21 @@
 .second {
   background-color: var(--dark-bg);
-  // height: 600px;
-  padding: 30px 100px;
+  padding: 100px 30px;
+  transform: translateY(-50px);
+  z-index: 9;
+  position: relative;
+  @media screen and (max-width: 1361px) {
+    transform: translateY(-60px);
+  }
   @media screen and (max-width: 1600px) {
-    padding: 20px 30px;
+    padding: 70px 30px;
   }
   &__title {
     text-align: center;
     font-size: 35px;
-    color: var(--white-bg);
+    color: var(--white-color);
     font-family: "Josefin Sans", sans-serif;
+    font-weight: 600;
   }
   &__wrapper {
     display: grid;
@@ -30,16 +36,9 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-
-      & img {
-        width: 400px;
-        @media screen and (max-width: 676px) {
-          max-width: 80%;
-        }
-      }
       & .card__title {
         font-size: 24px;
-        color: var(--white-bg);
+        color: var(--white-color);
         text-align: center;
         margin: 20px 0;
       }
@@ -49,5 +48,20 @@
         // width: 400px;
       }
     }
+
+    &--img {
+      width: 400px;
+      @media screen and (max-width: 676px) {
+        max-width: 80%;
+      }
+    }
   }
+}
+
+.third {
+  background-color: var(--light-gray-bg);
+  height: 600px;
+  z-index: 8;
+  transform: translateY(-50px);
+  padding: 100px 30px;
 }
