--- a/src/assets/sass/index.scss
+++ b/src/assets/sass/index.scss
@@ -10,7 +10,10 @@
   --medium-gray-bg: #fef9f4;
 
   --black-text-color: #333;
+  --second-text-color: #666;
   --blue: #5352ed;
+
+  --font-size-base: 14px;
 }
 *,
 *::before,
@@ -40,25 +43,24 @@ a:link {
   display: inline-block;
   outline: none;
   position: relative;
-  padding: 14px 20px;
-  font-size: 18px;
-  border-radius: 10px;
+  padding: 12px 42px;
+  font-size: var(--font-size-base);
+  border-radius: 4px;
   text-transform: capitalize;
-  font-weight: 800;
-  font-family: "Josefin Sans", sans-serif;
   border: 0;
   cursor: pointer;
   &::after {
     content: "";
     position: absolute;
     z-index: -1;
-    border-radius: 10px;
+    border-radius: 4px;
     width: 100%;
     height: 100%;
     left: 0;
     top: 0;
     transition: all 0.3s ease;
     background-color: inherit;
+    background-image: inherit;
   }
   &:hover {
     transform: translateY(-3px);
@@ -81,12 +83,13 @@ a:link {
 }
 
 .btn__blue {
-  background-color: var(--blue);
-  color: var(--white-bg);
+  background-image: linear-gradient(270deg, #057cea 0%, #00c5a0 100%);
+  color: var(--white-color);
 }
 
 .btn__white {
-  background-color: var(--white-bg);
+  background-color: rgba(255, 255, 255, 0.1);
+  color: var(--white-color);
 }
 
 .section__title {
