refactor(style):按照ui修改样式

--- a/src/assets/sass/index.scss
+++ b/src/assets/sass/index.scss
@@ -29,6 +29,10 @@ html {
   font-size: 62.5%;
 }
 
+body {
+  background-image: linear-gradient(180deg, #ffffff 0%, #f7fbff 100%);
+}
+
 ul,
 ol,
 nav {
