--- a/src/components/AppFooter/index.scss
+++ b/src/components/AppFooter/index.scss
@@ -26,7 +26,7 @@
       background-position: left;
       display: flex;
       align-items: center;
-      justify-content: center;
+      justify-content: flex-start;
 
       & .left__cards--card {
         display: flex;
