--- a/src/components/AppShowcase/index.scss
+++ b/src/components/AppShowcase/index.scss
@@ -1,6 +1,6 @@
 .showcase {
   width: 100%;
-  padding: 30px 50px;
+  // padding: 30px 50px;
   overflow: hidden;
   position: relative;
   &__title {
@@ -9,7 +9,7 @@
 
   &__wrapper {
     display: grid;
-    grid-template-columns: repeat(12, 1fr);
+    grid-template-columns: repeat(8, 1fr);
     justify-items: center;
     gap: 20px;
     @media screen and (max-width: 1600px) {
@@ -26,7 +26,8 @@
     &--img {
       border-radius: 4px;
       margin: 0;
-      max-height: 200px;
+      // max-height: 200px;
+      width: 100px;
     }
   }
 }
