--- a/src/pages/documents/index.scss
+++ b/src/pages/documents/index.scss
@@ -1,10 +1,42 @@
 .md__title {
   font-size: 3.6rem;
-  text-align: center;
+  text-align: left;
 }
 
 .md__tag {
   font-size: 1rem;
   color: #ccc;
   text-align: right;
+}
+
+.btn-group {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 0;
+}
+.go-btn {
+  width: 200px;
+  background: #ffffff;
+  padding: 20px;
+
+  border: none;
+  outline: none;
+  border-radius: 4px;
+  cursor: pointer;
+  .top-text {
+    color: #666666;
+    margin-bottom: 5px;
+  }
+}
+.next-btn {
+  .top-text,
+  .bo-text {
+    text-align: right;
+  }
+}
+.pre-btn {
+  .top-text,
+  .bo-text {
+    text-align: left;
+  }
 }
